<resources>
    <string name="app_name">CourseKotlin</string>
    <string name="window">""</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="substract">-</string>
    <string name="multi">*</string>
    <string name="divide">/</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="restart">C</string>
    <string name="equal">=</string>
</resources>